@@ -37,7 +37,7 @@ public class Drawer {
         for (int i = 0; i < construction.getBars().size(); i++) {
             var bar = createBar(x, construction.getBars().get(i), oneBarLength, height);
             group.getChildren().add(bar);
-            var nodeLoad = createNodeLoad(x, construction.getNodes().getLast(), height);
+            var nodeLoad = createNodeLoad(x, construction.getNodes().get(construction.getNodes().size() - 1), height);
             if (nodeLoad != null) {
                 group.getChildren().add(nodeLoad);
             }
@@ -47,7 +47,7 @@ public class Drawer {
             }
             x += bar.getWidth();
         }
-        var nodeLoad = createNodeLoad(x, construction.getNodes().getLast(), height);
+        var nodeLoad = createNodeLoad(x, construction.getNodes().get(construction.getNodes().size() - 1), height);
         if (nodeLoad != null) {
             group.getChildren().add(nodeLoad);
         }
@@ -92,7 +92,7 @@ public class Drawer {
     }
 
     private Rectangle createBar(Double x, Bar bar, Double width, Double height) {
-        var barLength = bar.getLenght() * 50;
+        var barLength = bar.getLength() * 50;
         var barArea = bar.getArea() * 40;
         if (barLength >= width) {
             barLength = width;
